Mailer, purcharse, factory

--- a/src/.env
+++ b/src/.env
@@ -7,3 +7,5 @@ GOOGLE_CLIENT_SECRET= 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
 GOOGLE_CALLBACK_URL= http://localhost:8080/gologin
 
 JWT_SECRET_KEY= cod3rPriv4t3!
+
+GMAIL_APP_PASS= "ktze ahbe vhkx mxdm"
